--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
   <script src="pristine/pristine.js"></script>
   <script src="js/main.js" type="module"></script>
+    <script src="index.js"></script>
 
 </body>
 
